--- a/Dragon Warrior 4 (NES)/Wiki/Dragon Warrior 4 (NES) - Values.wikitext
+++ b/Dragon Warrior 4 (NES)/Wiki/Dragon Warrior 4 (NES) - Values.wikitext
@@ -30,6 +30,42 @@
 |  $09  ||  Healie
 |}
 
+==Battle Tactics==
+
+{| class="wikitable sortable"
+|-
+!  Value  !!  Name
+|-
+|  $00  ||  Normal
+|-
+|  $01  ||  Save MP
+|-
+|  $02  ||  Offensive
+|-
+|  $03  ||  Defensive
+|-
+|  $04  ||  Try Out
+|-
+|  $05  ||  Use No MP
+|}
+
+==Chapters==
+
+{| class="wikitable sortable"
+|-
+!  Value  !!  Name
+|-
+|  $00  ||  Chapter 1 - Ragnar
+|-
+|  $01  ||  Chapter 2 - Alena, Cristo, &amp; Brey
+|-
+|  $02  ||  Chapter 3 - Taloon
+|-
+|  $03  ||  Chapter 4 - Mara &amp; Nara
+|-
+|  $04  ||  Chapter 5 - Hero
+|}
+
 ==Items==
 
 The item index only uses the bottom 7 bits so values range from <code>$00</code> to <code>$7f</code>.
@@ -313,15 +349,17 @@ In the item bags, the high bit <code>%10000000</code> indicates that the item is
 
 [Todo: finish filling out the sub-map entries]
 
+If the background is <code style="background-color: #dddd80;">yellow</code> then the submaps have not yet been checked.
+
 {| class="wikitable sortable"
 |-
 !  Map  !!  Sub-Map  !!  Description
-|-
+|-  style="background-color: #dddd80;"
 |  style="text-align: center;"  |  $00  ||  style="text-align: center; background-color: #eaecf0;"  |  $00  ||  Keeleon
 |-  style="background-color: #eaecf0;"
 |  colspan="3"  |  
-|-
-|  style="text-align: center;"  |  $01  ||  style="text-align: center; background-color: #eaecf0;"  |  $00  ||  Santeem - F1
+|-  style="background-color: #bbccff;"
+|  style="text-align: center;"  |  $01  ||  style="text-align: center;"  |  $00  ||  Santeem - F1
 |-
 |  style="text-align: center;"  |  $01  ||  style="text-align: center;"  |  $01  ||  Santeem - F2
 |-
@@ -338,7 +376,7 @@ In the item bags, the high bit <code>%10000000</code> indicates that the item is
 |  style="text-align: center;"  |  $02  ||  style="text-align: center;"  |  $03  ||  Burland - Flora's House, F2  --  Armor Shop, F2
 |-  style="background-color: #eaecf0;"
 |  colspan="3"  |  
-|-
+|-  style="background-color: #dddd80;"
 |  style="text-align: center;"  |  $03  ||  style="text-align: center; background-color: #eaecf0;"  |  $00  ||  Dire Palace
 |-  style="background-color: #eaecf0;"
 |  colspan="3"  |  
@@ -374,31 +412,41 @@ In the item bags, the high bit <code>%10000000</code> indicates that the item is
 |  style="text-align: center;"  |  $04  ||  style="text-align: center;"  |  $0e  ||  Endor - Back Castle, F2
 |-  style="background-color: #eaecf0;"
 |  colspan="3"  |  
-|-
+|-  style="background-color: #dddd80;"
 |  style="text-align: center;"  |  $05  ||  style="text-align: center; background-color: #eaecf0;"  |  $00  ||  Bonmalmo
-|-
+|-  style="background-color: #dddd80;"
 |  style="text-align: center;"  |  $06  ||  style="text-align: center; background-color: #eaecf0;"  |  $00  ||  Branca
-|-
+|-  style="background-color: #dddd80;"
 |  style="text-align: center;"  |  $07  ||  style="text-align: center; background-color: #eaecf0;"  |  $00  ||  Soretta
-|-
+|-  style="background-color: #dddd80;"
 |  style="text-align: center;"  |  $08  ||  style="text-align: center; background-color: #eaecf0;"  |  $00  ||  Gardenbur
-|-
+|-  style="background-color: #dddd80;"
 |  style="text-align: center;"  |  $09  ||  style="text-align: center; background-color: #eaecf0;"  |  $00  ||  Stancia
-|-
+|-  style="background-color: #dddd80;"
 |  style="text-align: center;"  |  $0a  ||  style="text-align: center; background-color: #eaecf0;"  |  $00  ||  Aktemto
-|-
+|-  style="background-color: #dddd80;"
 |  style="text-align: center;"  |  $0b  ||  style="text-align: center; background-color: #eaecf0;"  |  $00  ||  Riverton
-|-
+|-  style="background-color: #dddd80;"
 |  style="text-align: center;"  |  $0c  ||  style="text-align: center; background-color: #eaecf0;"  |  $00  ||  Bazaar
-|-
+|-  style="background-color: #dddd80;"
 |  style="text-align: center;"  |  $0d  ||  style="text-align: center; background-color: #eaecf0;"  |  $00  ||  Mintos
+|-  style="background-color: #eaecf0;"
+|  colspan="3"  |  
 |-
 |  style="text-align: center;"  |  $0e  ||  style="text-align: center; background-color: #eaecf0;"  |  $00  ||  Tempe
+|-  style="background-color: #eaecf0;"
+|  colspan="3"  style="text-align: center;"  |  No sub-maps
+|-  style="background-color: #eaecf0;"
+|  colspan="3"  |  
 |-
 |  style="text-align: center;"  |  $0f  ||  style="text-align: center; background-color: #eaecf0;"  |  $00  ||  Frenor
 |-
+|  style="text-align: center;"  |  $0f  ||  style="text-align: center;"  |  $01  ||  Frenor - Inn, F2  -- Top-left house, F2
+|-  style="background-color: #eaecf0;"
+|  colspan="3"  |  
+|-  style="background-color: #dddd80;"
 |  style="text-align: center;"  |  $10  ||  style="text-align: center; background-color: #eaecf0;"  |  $00  ||  Aneaux
-|-
+|-  style="background-color: #dddd80;"
 |  style="text-align: center;"  |  $11  ||  style="text-align: center; background-color: #eaecf0;"  |  $00  ||  Haville
 |-  style="background-color: #eaecf0;"
 |  colspan="3"  |  
@@ -413,20 +461,30 @@ In the item bags, the high bit <code>%10000000</code> indicates that the item is
 |-
 |  style="text-align: center;"  |  $13  ||  style="text-align: center; background-color: #eaecf0;"  |  $00  ||  Surene
 |-
+|  style="text-align: center;"  |  $13  ||  style="text-align: center;"  |  $01  ||  Surene - Inn, F2  --  Far right house, F2
+|-
+|  style="text-align: center;"  |  $13  ||  style="text-align: center;"  |  $02  ||  Surene - Main Building, Center F1
+|-
+|  style="text-align: center;"  |  $13  ||  style="text-align: center;"  |  $03  ||  Surene - Main Building, Sides  --  Main Building, Center F2
+|-
+|  style="text-align: center;"  |  $13  ||  style="text-align: center;"  |  $04  ||  Surene - Main Building, Old man's room under advanced weapon shop
+|-  style="background-color: #eaecf0;"
+|  colspan="3"  |  
+|-  style="background-color: #dddd80;"
 |  style="text-align: center;"  |  $14  ||  style="text-align: center; background-color: #eaecf0;"  |  $00  ||  Hometown
-|-
+|-  style="background-color: #dddd80;"
 |  style="text-align: center;"  |  $15  ||  style="text-align: center; background-color: #eaecf0;"  |  $00  ||  Monbaraba
-|-
+|-  style="background-color: #dddd80;"
 |  style="text-align: center;"  |  $16  ||  style="text-align: center; background-color: #eaecf0;"  |  $00  ||  Lakanaba
-|-
+|-  style="background-color: #dddd80;"
 |  style="text-align: center;"  |  $17  ||  style="text-align: center; background-color: #eaecf0;"  |  $00  ||  Kievs
-|-
+|-  style="background-color: #dddd80;"
 |  style="text-align: center;"  |  $18  ||  style="text-align: center; background-color: #eaecf0;"  |  $00  ||  Foxville
-|-
+|-  style="background-color: #dddd80;"
 |  style="text-align: center;"  |  $19  ||  style="text-align: center; background-color: #eaecf0;"  |  $00  ||  Seaside Village
-|-
+|-  style="background-color: #dddd80;"
 |  style="text-align: center;"  |  $1a  ||  style="text-align: center; background-color: #eaecf0;"  |  $00  ||  Gottside
-|-
+|-  style="background-color: #dddd80;"
 |  style="text-align: center;"  |  $1b  ||  style="text-align: center; background-color: #eaecf0;"  |  $00  ||  Rosaville
 |-  style="background-color: #eaecf0;"
 |  colspan="3"  |  
@@ -436,49 +494,49 @@ In the item bags, the high bit <code>%10000000</code> indicates that the item is
 |  style="text-align: center;"  |  $1c  ||  style="text-align: center;"  |  $01  ||  Secret Playground Entrance - B1, Exit
 |-  style="background-color: #eaecf0;"
 |  colspan="3"  |  
-|-
+|-  style="background-color: #dddd80;"
 |  style="text-align: center;"  |  $1d  ||  style="text-align: center; background-color: #eaecf0;"  |  $00  ||  House of Prophecy
-|-
+|-  style="background-color: #dddd80;"
 |  style="text-align: center;"  |  $1e  ||  style="text-align: center; background-color: #eaecf0;"  |  $00  ||  Shrine to Endor
-|-
+|-  style="background-color: #dddd80;"
 |  style="text-align: center;"  |  $1f  ||  style="text-align: center; background-color: #eaecf0;"  |  $00  ||  Shrine northwest of Endor
-|-
+|-  style="background-color: #dddd80;"
 |  style="text-align: center;"  |  $20  ||  style="text-align: center; background-color: #eaecf0;"  |  $00  ||  Woodsman's Shack
-|-
+|-  style="background-color: #dddd80;"
 |  style="text-align: center;"  |  $21  ||  style="text-align: center; background-color: #eaecf0;"  |  $00  ||  Desert Inn
-|-
+|-  style="background-color: #dddd80;"
 |  style="text-align: center;"  |  $22  ||  style="text-align: center; background-color: #eaecf0;"  |  $00  ||  Small Medal King
-|-
+|-  style="background-color: #dddd80;"
 |  style="text-align: center;"  |  $23  ||  style="text-align: center; background-color: #eaecf0;"  |  $00  ||  Shrine North of Soretta
-|-
+|-  style="background-color: #dddd80;"
 |  style="text-align: center;"  |  $24  ||  style="text-align: center; background-color: #eaecf0;"  |  $00  ||  Small Island Shack
-|-
+|-  style="background-color: #dddd80;"
 |  style="text-align: center;"  |  $25  ||  style="text-align: center; background-color: #eaecf0;"  |  $00  ||  Royal Crypt Entrance
-|-
+|-  style="background-color: #dddd80;"
 |  style="text-align: center;"  |  $26  ||  style="text-align: center; background-color: #eaecf0;"  |  $00  ||  Last Refuge
-|-
+|-  style="background-color: #dddd80;"
 |  style="text-align: center;"  |  $27  ||  style="text-align: center; background-color: #eaecf0;"  |  $00  ||  SW barrier shrine (Gigademon)
-|-
+|-  style="background-color: #dddd80;"
 |  style="text-align: center;"  |  $28  ||  style="text-align: center; background-color: #eaecf0;"  |  $00  ||  SE barrier shrine (Anderoug)
-|-
+|-  style="background-color: #dddd80;"
 |  style="text-align: center;"  |  $29  ||  style="text-align: center; background-color: #eaecf0;"  |  $00  ||  NW barrier shrine (Infurnus Shadow)
-|-
+|-  style="background-color: #dddd80;"
 |  style="text-align: center;"  |  $2a  ||  style="text-align: center; background-color: #eaecf0;"  |  $00  ||  Final Cave (Entrance in underworld)
-|-
+|-  style="background-color: #dddd80;"
 |  style="text-align: center;"  |  $2b  ||  style="text-align: center; background-color: #eaecf0;"  |  $00  ||  Travel Door near Riverton
-|-
+|-  style="background-color: #dddd80;"
 |  style="text-align: center;"  |  $2c  ||  style="text-align: center; background-color: #eaecf0;"  |  $00  ||  Shrine of Colossus (outside)
-|-
+|-  style="background-color: #dddd80;"
 |  style="text-align: center;"  |  $2d  ||  style="text-align: center; background-color: #eaecf0;"  |  $00  ||  Aktemto Mine (Dungeon)
-|-
+|-  style="background-color: #dddd80;"
 |  style="text-align: center;"  |  $2e  ||  style="text-align: center; background-color: #eaecf0;"  |  $00  ||  Shrine of Breaking Waves
-|-
+|-  style="background-color: #dddd80;"
 |  style="text-align: center;"  |  $2f  ||  style="text-align: center; background-color: #eaecf0;"  |  $00  ||  Padaquea Cave
-|-
+|-  style="background-color: #dddd80;"
 |  style="text-align: center;"  |  $30  ||  style="text-align: center; background-color: #eaecf0;"  |  $00  ||  Bakor's Hideout
-|-
+|-  style="background-color: #dddd80;"
 |  style="text-align: center;"  |  $31  ||  style="text-align: center; background-color: #eaecf0;"  |  $00  ||  Sphere Of Silence Cave
-|-
+|-  style="background-color: #dddd80;"
 |  style="text-align: center;"  |  $32  ||  style="text-align: center; background-color: #eaecf0;"  |  $00  ||  Golden Bracelet Cave
 |-  style="background-color: #eaecf0;"
 |  colspan="3"  |  
@@ -498,31 +556,31 @@ In the item bags, the high bit <code>%10000000</code> indicates that the item is
 |  style="text-align: center;"  |  $33  ||  style="text-align: center;"  |  $06  ||  Secret Playground Dungeon - B3
 |-  style="background-color: #eaecf0;"
 |  colspan="3"  |  
-|-
+|-  style="background-color: #dddd80;"
 |  style="text-align: center;"  |  $34  ||  style="text-align: center; background-color: #eaecf0;"  |  $00  ||  Cascade Cave
-|-
+|-  style="background-color: #dddd80;"
 |  style="text-align: center;"  |  $35  ||  style="text-align: center; background-color: #eaecf0;"  |  $00  ||  Final Cave
-|-
+|-  style="background-color: #dddd80;"
 |  style="text-align: center;"  |  $36  ||  style="text-align: center; background-color: #eaecf0;"  |  $00  ||  Iron Safe Cave
-|-
+|-  style="background-color: #dddd80;"
 |  style="text-align: center;"  |  $37  ||  style="text-align: center; background-color: #eaecf0;"  |  $00  ||  Cave of Betrayal
-|-
+|-  style="background-color: #dddd80;"
 |  style="text-align: center;"  |  $38  ||  style="text-align: center; background-color: #eaecf0;"  |  $00  ||  Silver Statuette Cave
-|-
+|-  style="background-color: #dddd80;"
 |  style="text-align: center;"  |  $39  ||  style="text-align: center; background-color: #eaecf0;"  |  $00  ||  Burland-Izmit tunnel
-|-
+|-  style="background-color: #dddd80;"
 |  style="text-align: center;"  |  $3a  ||  style="text-align: center; background-color: #eaecf0;"  |  $00  ||  Tunnel between Branca and Endor
-|-
+|-  style="background-color: #dddd80;"
 |  style="text-align: center;"  |  $3b  ||  style="text-align: center; background-color: #eaecf0;"  |  $00  ||  Royal Crypt Dungeon
-|-
+|-  style="background-color: #dddd80;"
 |  style="text-align: center;"  |  $3c  ||  style="text-align: center; background-color: #eaecf0;"  |  $00  ||  Necrosaro's Lair
-|-
+|-  style="background-color: #dddd80;"
 |  style="text-align: center;"  |  $3d  ||  style="text-align: center; background-color: #eaecf0;"  |  $00  ||  Zenethian Tower
-|-
+|-  style="background-color: #dddd80;"
 |  style="text-align: center;"  |  $3e  ||  style="text-align: center; background-color: #eaecf0;"  |  $00  ||  Outside Zenethia
-|-
+|-  style="background-color: #dddd80;"
 |  style="text-align: center;"  |  $3f  ||  style="text-align: center; background-color: #eaecf0;"  |  $00  ||  Birdsong Tower
-|-
+|-  style="background-color: #dddd80;"
 |  style="text-align: center;"  |  $40  ||  style="text-align: center; background-color: #eaecf0;"  |  $00  ||  World Tree
 |-  style="background-color: #eaecf0;"
 |  colspan="3"  |  
@@ -540,19 +598,19 @@ In the item bags, the high bit <code>%10000000</code> indicates that the item is
 |  style="text-align: center;"  |  $41  ||  style="text-align: center;"  |  $05  ||  Loch Tower - B1, hp/mp refresh room
 |-  style="background-color: #eaecf0;"
 |  colspan="3"  |  
-|-
+|-  style="background-color: #dddd80;"
 |  style="text-align: center;"  |  $42  ||  style="text-align: center; background-color: #eaecf0;"  |  $00  ||  Lighthouse
-|-
+|-  style="background-color: #dddd80;"
 |  style="text-align: center;"  |  $43  ||  style="text-align: center; background-color: #eaecf0;"  |  $00  ||  Konenber
-|-
+|-  style="background-color: #dddd80;"
 |  style="text-align: center;"  |  $44  ||  style="text-align: center; background-color: #eaecf0;"  |  $00  ||  NE barrier shrine (Radimvice)
-|-
+|-  style="background-color: #dddd80;"
 |  style="text-align: center;"  |  $45  ||  style="text-align: center; background-color: #eaecf0;"  |  $00  ||  Necrosaro's Palace
-|-
+|-  style="background-color: #dddd80;"
 |  style="text-align: center;"  |  $46  ||  style="text-align: center; background-color: #eaecf0;"  |  $00  ||  Zenethia
-|-
+|-  style="background-color: #dddd80;"
 |  style="text-align: center;"  |  $47  ||  style="text-align: center; background-color: #eaecf0;"  |  $00  ||  Shrine of the Horn
-|-
+|-  style="background-color: #dddd80;"
 |  style="text-align: center;"  |  $48  ||  style="text-align: center; background-color: #eaecf0;"  |  $00  ||  Shrine of Colossus (Dungeon)
 |}
 
